overflow fix

--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
 }
 
 ul {
@@ -17,6 +28,10 @@ li {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.active a {
+    color: #5BACC3;
 }
 
 h1, h2, h3 {
@@ -98,21 +113,36 @@ button {
 
 .footer {
     background-color: #FFF0ED;
-    text-align: left;
+    padding: 25px 0;
+    text-align: center;
+    overflow: hidden; 
+}
+.footer-row {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
 }
-.footer div {
-    box-sizing: border-box;
-    padding: 0 50px;
+.footer-column {
+    flex: 1;
+    text-align: left;
+    display: block; 
+    padding-left: 6%;
 }
-.footer div img {
+.footer-column p{
+    margin: 0;
+}
+.footer img {
+    width: 50;
     height: 50px;
-    width: 50px;
 }
-.footer div h3 {
-    margin-bottom: 5px;
-}
-.footer div p {
-    margin: 0 0 10px;
+
+@media (max-width: 600px) {
+    .footer-row {
+        flex-direction: column;
+    }
+
+    .products__card {
+        max-width: 100%; 
+    }
 }
