--- a/css/landing.css
+++ b/css/landing.css
@@ -1,37 +1,37 @@
 .about-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px;
     background-color: #FFF0ED;
+    overflow: hidden;
+}
+.about-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.about-row {
+    display: flex;
+    width: 100%;
 }
 .about-description {
-    flex: 1;
-    max-width: 50%;
-    margin-left: 50px;
+    flex: 0 0 65%;
+    padding-left: 10%;
 }
-.about-description h1 {
-    margin: 0;
-}
-.about-description p {
-    width: 350px;
-    text-align: left;
+.about-description p{
+    padding-right: 50%;
 }
 .about-image {
-    flex: 1;
-    max-width: 50%;
-    display: flex;
-    justify-content: center;
+    flex: 0 0 35%;
 }
 .about-image img {
-    max-width: 100%;
+    max-width: 100%; 
     height: auto;
+    display: block;
 }
 
 .products {
     background-color: #F7F7F7;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
 }
 .products__title {
     margin-bottom: 20px;
@@ -40,23 +40,22 @@
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-bottom: 20px;
 }
-.products__card {
-    display: inline-block;
-    flex-direction: column;
-    text-align: center;
+.products__card{
+    padding: 20px;
     margin: 20px;
+    margin-bottom: 20px;
     background-color: #FFF;
     border: 2px #000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    flex: 1;
+    width: 80%; 
     max-width: 300px;
+    overflow: hidden; 
 }
 .products__card img {
-    padding-top: 25px;
-    object-fit: scale-down;
+    max-height: 150px;
+    width: auto;
 }
 
 .promo {
@@ -64,6 +63,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     background-color: #FFF;
     padding: 20px;
     height: 500px;
@@ -73,8 +73,8 @@
     margin: 20px;
     padding: 10px;
     color: #F7F7F7;
-    box-sizing: border-box;
 }
+
 .price {
     color: #5BACC3;
 }
